[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sprites/Canons/purple_canon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Canons/purple_canon_stand.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/Canon.gd" type="Script" id=3]
[ext_resource path="res://Assets/sfx/shooting.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 15.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 28.0179

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 25, 16.5 )

[sub_resource type="CircleShape2D" id=6]
radius = 29.4279

[node name="FiringCanon" type="Node2D"]
script = ExtResource( 3 )

[node name="Stand" type="Sprite" parent="."]
position = Vector2( 0, 20 )
texture = ExtResource( 2 )

[node name="Canon" type="Sprite" parent="."]
position = Vector2( 0, 47 )
texture = ExtResource( 1 )
offset = Vector2( 0, 5.4 )

[node name="Muzzle" type="Position2D" parent="Canon"]
position = Vector2( 0, 40 )

[node name="ShootAnimation" type="AnimationPlayer" parent="Canon"]
anims/RESET = SubResource( 3 )
anims/Shoot = SubResource( 4 )

[node name="Body" type="KinematicBody2D" parent="."]

[node name="StandShape" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 16.5 )
shape = SubResource( 1 )

[node name="CanonShape" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 46 )
shape = SubResource( 2 )

[node name="StandColorArea" type="Area2D" parent="Body"]
collision_layer = 4
collision_mask = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/StandColorArea"]
position = Vector2( 0, 16.5 )
shape = SubResource( 5 )

[node name="CanonColorArea" type="Area2D" parent="Body"]
collision_layer = 4
collision_mask = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/CanonColorArea"]
position = Vector2( 0, 46 )
shape = SubResource( 6 )

[node name="ShoutSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "sfx2d"
